--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "babel-eslint": "^10.0.1",
     "cssnext": "^1.8.4",
     "eslint": "^4.19.1",
     "eslint-config-eslint": "^4.0.0",
+    "eslint-plugin-react": "^7.12.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^8.0.0",
