--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-eslint": "^10.0.1",
-    "cssnext": "^1.8.4",
+    "postcss-preset-env": "^6.5.0",
     "eslint": "^4.19.1",
     "eslint-config-eslint": "^4.0.0",
     "eslint-plugin-react": "^7.12.4",
@@ -34,7 +34,6 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-csso": "^3.0.1",
     "gulp-eslint": "^4.0.2",
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^4.0.1",
