--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "browser-sync": "^2.26.3",
     "gridle": "^2.0.48",
+    "gulp-data": "^1.3.1",
     "nucleus": "0.0.0"
   },
   "scripts": {
@@ -24,9 +25,8 @@
     "@babel/preset-env": "^7.1.0",
     "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "babel-eslint": "^10.0.1",
-    "postcss-preset-env": "^6.5.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-config-eslint": "^4.0.0",
     "eslint-plugin-react": "^7.12.4",
@@ -45,6 +45,7 @@
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "nucleus-styleguide": "^1.1.1",
+    "postcss-preset-env": "^6.5.0",
     "precss": "^3.1.2"
   }
 }
